k8s/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      serviceAccountName: zenith
      containers:
        - env:
            - name: ME_CONFIG_MONGODB_PORT
              value: '27017'
            - name: ME_CONFIG_MONGODB_SERVER
              value: mongo
            - name: ME_CONFIG_SITE_BASEURL
              value: /
          image: mongo-express:1.0.2-20-alpine3.19
          name: flask-express
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: mongo-express
